# grouboy

./: .clang-format  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE.txt  README.md
.github/workflows/: ci.yml  test-report.yml  wasm.yml
gbapu-master/src/: Apu.cpp
html/: index.html  tictactoe.js
libs/bitmap/: bitmap_image.hpp
src/: GUI.cpp  GUI.hpp  Makefile  cartridge.cpp  cartridge.hpp  cpu.cpp  cpu.hpp  cpu_instructions_16bits_arithmetic_logical.cpp  cpu_instructions_16bits_load_store_move.cpp  cpu_instructions_8bits_arithmetic_logical.cpp  cpu_instructions_8bits_load_store_move.cpp  cpu_instructions_8bits_rotation_shifts_bit.cpp  cpu_instructions_jumps_calls.cpp  cpu_instructions_misc_control.cpp  emulator.cpp  emulator.hpp  gpu.cpp  gpu.hpp  graphics.cpp  graphics.hpp  input.cpp  input.hpp  input_controller.cpp  input_controller.hpp  instructions.hpp  interrupt_handler.cpp  interrupt_handler.hpp  main.cpp  mmu.cpp  mmu.hpp  ppu.cpp  ppu.hpp  rgb_image.cpp  rgb_image.hpp  sprite.cpp  sprite.hpp  tile.cpp  tile.hpp  types.hpp  utils.cpp  (+1 more)
src/apu/: apu.cpp  apu.hpp
src/apu/channels/: audio_mixer.cpp  audio_mixer.hpp  channel.cpp  channel.hpp  channel1.cpp  channel1.hpp  channel2.cpp  channel2.hpp  channel3.cpp  channel3.hpp  channel4.cpp  channel4.hpp  channel_wave.cpp  channel_wave.hpp  frame_sequencer.cpp  frame_sequencer.hpp  frequency_sweep.cpp  frequency_sweep.hpp  length_timer.cpp  length_timer.hpp  pulse_channel.cpp  pulse_channel.hpp  volume_sweep.cpp  volume_sweep.hpp  wavelength_sweep.cpp  wavelength_sweep.hpp
src/apu/filters/: highpass_filter.cpp  highpass_filter.hpp
src/apu/signal/: falling_edge_detector.cpp  falling_edge_detector.hpp  noise_signal.cpp  noise_signal.hpp  square_wave.cpp  square_wave.hpp  wave.cpp  wave.hpp
src/common/: types.hpp  utils.cpp  utils.hpp
src/cpu/: cpu.cpp  cpu.hpp  cpu_instructions_16bits_arithmetic_logical.cpp  cpu_instructions_16bits_load_store_move.cpp  cpu_instructions_8bits_arithmetic_logical.cpp  cpu_instructions_8bits_load_store_move.cpp  cpu_instructions_8bits_rotation_shifts_bit.cpp  cpu_instructions_jumps_calls.cpp  cpu_instructions_misc_control.cpp  input_controller.cpp  input_controller.hpp  instructions.hpp  interrupt_handler.cpp  interrupt_handler.hpp  interrupt_manager.cpp  interrupt_manager.hpp
src/graphics/: background_window_pixel_fetcher.cpp  background_window_pixel_fetcher.hpp  color_palette_memory_mapper.cpp  color_palette_memory_mapper.hpp  generic_palette.cpp  generic_palette.hpp  grayscale_palette.cpp  grayscale_palette.hpp  lcd_status_register.cpp  lcd_status_register.hpp  palette.cpp  palette.hpp  pixel.cpp  pixel.hpp  pixel_fifo.cpp  pixel_fifo.hpp  pixel_fifo_renderer.cpp  pixel_fifo_renderer.hpp  ppu.cpp  ppu.hpp  rgb555_palette.hpp  rgb_color.cpp  rgb_color.hpp  rgb_image.cpp  rgb_image.hpp  sprite.cpp  sprite.hpp  sprite_pixel_fetcher.cpp  sprite_pixel_fetcher.hpp  tile.cpp  tile.hpp  tilemap.cpp  tilemap.hpp
src/graphics/palette/: color_palette_memory_mapper.cpp  color_palette_memory_mapper.hpp  generic_palette.hpp  grayscale_palette.cpp  grayscale_palette.hpp  palette.hpp  rgb555_palette.cpp  rgb555_palette.hpp
src/gui/: ApplicationData.hpp  CMakeLists.txt  DebugTileWindow.cpp  DebugTileWindow.hpp  GUI.cpp  GUI.hpp  ImageItem.cpp  ImageItem.hpp  QGBEmulator.cpp  QGBEmulator.hpp  QTileMap.cpp  QTileMap.hpp  TileDebugger.cpp  TileDebugger.hpp  emulator_sdl_gui.cpp  emulator_sdl_gui.hpp  main.cpp
src/gui/SDL/: CMakeLists.txt  main.cpp
src/gui/qml/: DebugTileWindow.qml  DropFileArea.qml  EmulatorView.qml  main.qml
src/memory/: bootrom.hpp  cartridge.cpp  cartridge.hpp  mmu.cpp  mmu.hpp  oam.cpp  oam.hpp  switchable_memory_bank.cpp  switchable_memory_bank.hpp  vram.cpp  vram.hpp
src/memory/mbc/: mbc1.cpp  mbc1.hpp  mbc2.cpp  mbc2.hpp  mbc3.cpp  mbc3.hpp  mbc_rom_only.cpp  mbc_rom_only.hpp  memory_bank_controller.cpp  memory_bank_controller.hpp
src/serial/: serial_transfer_manager.cpp  serial_transfer_manager.hpp
src/timer/: timer.cpp  timer.hpp
src/wasm/: wasm_interface.cpp  wasm_interface.hpp
tests/: CMakeLists.txt  test_acid.cpp  test_bios.cpp  test_blargg.cpp  test_cartridge.cpp  test_cpu.cpp  test_cpu_instructions_16bits_arithmetic_logical.cpp  test_cpu_instructions_16bits_load_store_move.cpp  test_cpu_instructions_8bits_arithmetic_logical.cpp  test_cpu_instructions_8bits_load_store_move.cpp  test_cpu_instructions_8bits_rotation_shifts_bit.cpp  test_cpu_instructions_jumps_calls.cpp  test_cpu_instructions_misc_control.cpp  test_frame_sequencer.cpp  test_gpu.cpp  test_input.cpp  test_input_controller.cpp  test_length_timer.cpp  test_mbc.cpp  test_mmu.cpp  test_mooneye.cpp  test_palette.cpp  test_ppu.cpp  test_rgb_image.cpp  test_sprite.cpp  test_tile.cpp  test_timer.cpp  test_utils.cpp  test_wavelength_sweep.cpp
tests/apu/: test_audio_mixer.cpp  test_falling_edge_detector.cpp  test_frequency_sweep.cpp  test_length_timer.cpp  test_palette.cpp  test_square_wave.cpp  test_volume_sweep.cpp  test_wave.cpp  test_wavelength_sweep.cpp
tests/cpu/: test_cartridge.cpp  test_cpu_instructions_16bits_load_store_move.cpp  test_cpu_instructions_8bits_load_store_move.cpp  test_mooneye.cpp  test_serial.cpp
tests/mmu/: test_mbc.cpp  test_mmu.cpp  test_switchable_memory_bank.cpp  test_timer.cpp
tests/ppu/: test_acid.cpp  test_color_palette_memory_mapper.cpp  test_grayscale_palette.cpp  test_palette.cpp  test_pixel.cpp  test_pixel_fifo.cpp  test_pixel_fifo_renderer.cpp  test_ppu.cpp  test_rgb_color.cpp  test_sprite.cpp  test_sprite_pixel_fetcher.cpp  test_tile.cpp
web/grouboy/: .eslintignore  .gitignore  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
web/grouboy/app/: .gitignore  emulator.tsx  globals.css  grouboy_wasm.d.ts  layout.tsx  page.tsx
web/grouboy/public/: tictactoe.gb
